fix: adjust positioning of notification badge for improved visibility

--- a/client/src/Users/Student/Notification/NotificationStudent.css
+++ b/client/src/Users/Student/Notification/NotificationStudent.css
@@ -147,8 +147,8 @@
   position: absolute;
   border-radius: 0px 6px 0px 0px;
   padding: 0px 5px;
-  top: -5px;
-  right: -5px;
+  top: 0px;
+  right: 0px;
   font-size: 30px;
 }
 
